2006-10-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	new discovery parameters:
	RFC2863_IF_MIB::bandwidth-usage
	RFC2863_IF_MIB::bandwidth-limits

2006-10-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigTree.pm (new): exclusivity lock:
	only one compiler can run for a tree

2006-09-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/generic/rfc2863.if-mib.xml: added an overvew shortcut
	for interface errors

	* perllib/Torrus/RPN.pm: IF accepts UNKN values

2006-09-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac: theads module version must be 1.41 or higher,
	and threads::shared 1.03 or higher.

2006-09-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/rrddir2xml.in: New option: --filter

	* xmlconfig/generic/rfc2670.docsis-if.xml:
	Added Frequency to upstream statictics monitoring.
	Old upstream stats will be lost!!
	The old templates file is
	in xmlconfig/old/rfc2670.docsis-if.old.1.0.4.xml

2006-09-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoSCE.pm: New discovery module

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	Improvements for persistent interface indexes

	* perllib/Torrus/DevDiscover/MotorolaBSR.pm: New discovery module
	for Motorola CMTS (Riverdelta)

2006-09-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/RRDStorage.pm (storeData):
	RRDQueue statistics are now set in the beginning of the cycle

2006-08-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigBuilder.pm (new): encoding changed from
	UTF8 to UTF-8

2006-07-31  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoFirewall.pm (discover):
	Interface names taken from ifName

2006-07-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
