@@ -46,6 +46,7 @@
       $cipMacHCSwitchedBytes.%ifindex-map%.%direction%.%peer-macoid%
     </param>
     <param name="snmp-object-type"  value="COUNTER64" />
+    <param name="ext-dstype"        value="COUNTER64" />
 
     <param name="data-file">
       %system-id%_%interface-nick%_%peer-macaddr%_macacc.rrd"
