@@ -1,3 +1,9 @@
+2006-11-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoIOS_MacAccounting.pm:
+	New discovery parameter:
+	CiscoIOS_MacAccounting::external-serviceid
+
 2006-10-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
